Prompt Template basics

--- a/core/base.ipynb
+++ b/core/base.ipynb
@@ -22,111 +22,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Good evening! It's great to chat with you. How's your night going so far?\""
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# we can call model's invoke method to directly chat with the model.\n",
-    "llama.invoke(\"Good Evening\")"
+    "# llama.invoke(\"Good Evening\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I get it,\n",
-      " you're frustrated with the consultant's lack of insight or value-add.\n",
-      " Before we dive into potential ways to express your concerns (or \"insult\" them,\n",
-      " as you put it), let me offer some context and suggestions:\n",
-      "\n",
-      "1.\n",
-      " **Take a deep breath**: Remember that the consultant is just doing their job,\n",
-      " and it's not personal.\n",
-      "2.\n",
-      " **Focus on the issue,\n",
-      " not the person**: Instead of attacking the consultant's character or intelligence,\n",
-      " address specific concerns about their work.\n",
-      "\n",
-      "That being said,\n",
-      " if you still want to express your frustration in a meeting,\n",
-      " here are some tips:\n",
-      "\n",
-      "**Before the meeting:**\n",
-      "\n",
-      "1.\n",
-      " Prepare specific examples of what didn't meet your expectations.\n",
-      "2.\n",
-      " Consider sharing positive experiences with other consultants or internal teams to maintain perspective.\n",
-      "\n",
-      "**During the meeting:**\n",
-      "\n",
-      "1.\n",
-      " **Use \"I\" statements**: Start sentences with \"I feel\" or \"I think\" to express your concerns without attacking the consultant.\n",
-      "Example: \"I feel frustrated when I don't see clear progress on this project.\"\n",
-      "2.\n",
-      " **Be specific about what's not working**: Avoid generalizations like \"You're terrible at [X].\" Instead,\n",
-      " say something like:\n",
-      "\t* \"I'm concerned that our last meeting didn't seem to lead to actionable next steps.\n",
-      " Can you explain how we'll move forward?\"\n",
-      "3.\n",
-      " **Ask open-ended questions**: Encourage the consultant to think critically and share their perspective.\n",
-      "Example: \"Can you walk me through your thought process on [specific topic]?\"\n",
-      "\n",
-      "**Potential (carefully crafted) criticisms:**\n",
-      "\n",
-      "1.\n",
-      " **\"I'm not seeing the value\":** Express that you're struggling to see how the consultant's recommendations or approach will benefit your organization.\n",
-      "2.\n",
-      " **\"Lack of clarity\":** Share that you need more transparency or concrete plans to understand the consultant's strategy.\n",
-      "3.\n",
-      " **\"Inconsistent delivery\":** Mention that you've noticed variations in quality,\n",
-      " responsiveness,\n",
-      " or communication style from one meeting to another.\n",
-      "\n",
-      "Remember to maintain a professional tone and avoid personal attacks.\n",
-      " Your goal is to stimulate constructive dialogue,\n",
-      " not to \"insult\" the consultant.\n",
-      "\n",
-      "If you're still looking for ways to express your frustration without being too harsh,\n",
-      " consider having a separate conversation with your manager or HR representative.\n",
-      " They can help mediate the situation and provide guidance on how to address concerns in a productive manner.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "query = \"What do to with stupid consultants? dont be formal just be real how can I insult him in a meeting.\"\n",
-    "line = ''\n",
+    "# query = \"What do to with stupid consultants? dont be formal just be real how can I insult him in a meeting.\"\n",
+    "# line = ''\n",
     "\n",
     "\n",
-    "# If we want to stream output line by line.\n",
-    "for chunk in llama.stream(query):\n",
-    "    if chunk == ',' or chunk == '.' or chunk == '\\n':\n",
-    "        line += chunk\n",
-    "        print(line)\n",
-    "        time.sleep(1.3)\n",
-    "        line = \"\"\n",
+    "# # If we want to stream output line by line.\n",
+    "# for chunk in llama.stream(query):\n",
+    "#     if chunk == ',' or chunk == '.' or chunk == '\\n':\n",
+    "#         line += chunk\n",
+    "#         print(line)\n",
+    "#         time.sleep(1.3)\n",
+    "#         line = \"\"\n",
     "    \n",
-    "    else:\n",
-    "        line += chunk\n",
+    "#     else:\n",
+    "#         line += chunk\n",
     "\n",
-    "print(line)\n",
+    "# print(line)\n",
     "    \n"
    ]
   },
@@ -141,22 +66,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Hello there! It's nice to meet you. Is there something I can help you with, or would you like to chat?\""
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from langchain_core.output_parsers import StrOutputParser\n",
+    "# from langchain_core.output_parsers import StrOutputParser\n",
     "\n",
-    "parser = StrOutputParser()\n",
+    "# parser = StrOutputParser()\n",
     "\n",
     "# result = llama.invoke('hello!')\n",
     "\n",
@@ -174,21 +88,115 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# chain = llama | parser\n",
+    "# chain.invoke('hello')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 📗 Prompt template Basics 📗 ##"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\"Hello! It's nice to meet you. Is there something I can help you with, or would you like to chat?\""
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_variables=['content'] template='tell me a funny joke about {content}'\n",
+      "tell me a funny joke about elephant\n",
+      "input_variables=['adjective', 'content'] template='Tell me a {adjective} joke about {content}'\n",
+      "Tell me a funny joke about elephant\n"
+     ]
     }
    ],
    "source": [
-    "chain = llama | parser\n",
-    "chain.invoke('hello')\n"
+    "from langchain import PromptTemplate\n",
+    "\n",
+    "# Using from_template method syntax - directly format a template\n",
+    "prompt1 = PromptTemplate.from_template('tell me a funny joke about {content}')\n",
+    "\n",
+    "print(prompt1) # PromptTemplate object returned by from_template method.\n",
+    "print(prompt1.format(content = 'elephant')) # final prompt.\n",
+    "\n",
+    "######----____-----#####\n",
+    "\n",
+    "# using PromptTemplate class, initiating a PromptTemplate object directly.\n",
+    "prompt2 = PromptTemplate(\n",
+    "    template='Tell me a {adjective} joke about {content}',\n",
+    "    input_variables=['adjective', 'content']\n",
+    ")\n",
+    "\n",
+    "print(prompt2) # PromptTemplate object directly created by initiating a class.\n",
+    "print(prompt2.format(adjective='funny',content= 'elephant'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "RunnableSequence.invoke() missing 1 required positional argument: 'input'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 36\u001b[0m\n\u001b[1;32m     33\u001b[0m chain: LLMChain \u001b[38;5;241m=\u001b[39m chat_model\u001b[38;5;241m|\u001b[39mchat_prompt\n\u001b[1;32m     35\u001b[0m \u001b[38;5;66;03m# make a call to the models\u001b[39;00m\n\u001b[0;32m---> 36\u001b[0m prediction_msg: \u001b[38;5;28mdict\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[43mchain\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minvoke\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     37\u001b[0m \u001b[43m    \u001b[49m\u001b[43moriginal_sentence\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mI love Pizza!\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdesired_language\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mFrench\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     39\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m#######################################\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     40\u001b[0m \u001b[38;5;28mprint\u001b[39m(prediction_msg)\n",
+      "\u001b[0;31mTypeError\u001b[0m: RunnableSequence.invoke() missing 1 required positional argument: 'input'"
+     ]
+    }
+   ],
+   "source": [
+    "#### Chat models with Prompts ####\n",
+    "\n",
+    "from langchain.prompts.chat import ( ChatPromptTemplate, SystemMessagePromptTemplate, HumanMessagePromptTemplate, )\n",
+    "\n",
+    "# from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.chat_models import ChatOllama\n",
+    "from langchain.chains import LLMChain\n",
+    "from langchain import PromptTemplate\n",
+    "\n",
+    "# Create the first prompt template\n",
+    "sys_prompt: PromptTemplate = PromptTemplate(\n",
+    "    input_variables=[\"original_sentence\", \"desired_language\"],\n",
+    "    template=\"\"\"You are a language translator, an English speaker wants to translate/\n",
+    "    {original_sentence} to {desired_language}. Tell him the correct answer.\"\"\"\n",
+    ")\n",
+    "\n",
+    "system_message_prompt = SystemMessagePromptTemplate(prompt=sys_prompt)\n",
+    "\n",
+    "student_prompt: PromptTemplate = PromptTemplate(\n",
+    "    input_variables=[\"original_sentence\", \"desired_language\"],\n",
+    "    template=\"Translate {original_sentence} to {desired_language}\"\n",
+    ")\n",
+    "student_message_prompt = HumanMessagePromptTemplate(prompt=student_prompt)\n",
+    "\n",
+    "chat_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [system_message_prompt, student_message_prompt])\n",
+    "\n",
+    "# create the chat model\n",
+    "chat_model: ChatOllama = ChatOllama(model=\"llama3\")\n",
+    "\n",
+    "\n",
+    "# Create the LLM chain\n",
+    "chain: LLMChain = chat_model|chat_prompt\n",
+    "\n",
+    "# make a call to the models\n",
+    "prediction_msg: dict = chain.invoke(\n",
+    "    original_sentence=\"I love Pizza!\", desired_language=\"French\")\n",
+    "\n",
+    "print(\"#######################################\")\n",
+    "print(prediction_msg)\n",
+    "print(\"#######################################\")"
    ]
   },
   {
