Prompt Template Basics II

--- a/core/base.ipynb
+++ b/core/base.ipynb
@@ -118,7 +118,7 @@
     }
    ],
    "source": [
-    "from langchain import PromptTemplate\n",
+    "from langchain_core.prompts import PromptTemplate\n",
     "\n",
     "# Using from_template method syntax - directly format a template\n",
     "prompt1 = PromptTemplate.from_template('tell me a funny joke about {content}')\n",
@@ -136,6 +136,16 @@
     "\n",
     "print(prompt2) # PromptTemplate object directly created by initiating a class.\n",
     "print(prompt2.format(adjective='funny',content= 'elephant'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import PromptTemplate,few\n",
+    "from labn\n"
    ]
   },
   {
