--- a/core/prompt.ipynb
+++ b/core/prompt.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -103,16 +103,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Why did the elephant quit the circus?\\n\\nBecause it was tired of working for peanuts and wanted to trunk its own business!'"
+       "\"Here's one:\\n\\nWhy did the elephant quit his job at the circus?\\n\\nBecause he was tired of working for peanuts and wanted to trumpet his own success!\\n\\nHope that made you trumpet with laughter!\""
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,14 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "text=' A Human is trying to teach you something new by giving examples below in the form of question and answers. For every question there is an answer provided that is suitable for the human. Try to learn from these examples and answer the final question asked by the user. Examples are - \\n\\n\\n    Question : what is 2 c 2 ?\\n    Answer : 4\\n\\n\\n\\n    Question : what is 5 c 3 ?\\n    Answer : 15\\n\\n\\n\\n    Question : what is 12 c 2 ?\\n    Answer : 24\\n\\n\\nQuestion: what is 10 c 2 ?'\n"
+      "text=' A User is trying to teach you something new by giving examples below in the form of question and answers. For every question there is an answer provided, try to relate the answer to its respective question. learn the pattern through the question and answer pair given as example. While learning this pattern keep an open mind and try to answer the final question asked by the user based on this new pattern. Examples are - \\n\\n\\n    Question : what is 2 * 2 ?\\n    Answer : 4\\n\\n\\n\\n    Question : what is 5 * 3 ?\\n    Answer : 8\\n\\n\\n\\n    Question : what is 12 * 2 ?\\n    Answer : 14\\n\\n\\nQuestion: In the given examples please explain what does c stands for and what is 10 c 2 ?'\n"
      ]
     }
    ],
@@ -162,16 +162,16 @@
     "# first create a list of dictionaries as examples.\n",
     "user_provided_examples: List[Dict[str, str]] = [\n",
     "    {\n",
-    "        \"question\": \"what is 2 c 2 ?\",\n",
+    "        \"question\": \"what is 2 * 2 ?\",\n",
     "        \"answer\": \"4\",\n",
     "    },\n",
     "    {\n",
-    "        \"question\": \"what is 5 c 3 ?\",\n",
-    "        \"answer\": \"15\",\n",
+    "        \"question\": \"what is 5 * 3 ?\",\n",
+    "        \"answer\": \"8\",\n",
     "    },\n",
     "    {\n",
-    "        \"question\": \"what is 12 c 2 ?\",\n",
-    "        \"answer\": \"24\",\n",
+    "        \"question\": \"what is 12 * 2 ?\",\n",
+    "        \"answer\": \"14\",\n",
     "    },\n",
     "]\n",
     "\n",
@@ -193,7 +193,7 @@
     "example_pt.invoke(user_provided_examples[0]).to_string()\n",
     "\n",
     "\n",
-    "system_message = ''' A Human is trying to teach you something new by giving examples below in the form of question and answers. For every question there is an answer provided that is suitable for the human. Try to learn from these examples and answer the final question asked by the user. Examples are - '''\n",
+    "system_message = ''' A User is trying to teach you something new by giving examples below in the form of question and answers. For every question there is an answer provided, try to relate the answer to its respective question. learn the pattern through the question and answer pair given as example. While learning this pattern keep an open mind and try to answer the final question asked by the user based on this new pattern. Examples are - '''\n",
     "\n",
     "\n",
     "\n",
@@ -209,7 +209,7 @@
     "\n",
     "\n",
     "# Finally we'll invoke the fewshot_pt to create final prompt that will be sent to the llm.\n",
-    "final_prompt = fewshot_pt.invoke({\"question\": \"what is 10 c 2 ?\"})\n",
+    "final_prompt = fewshot_pt.invoke({\"question\": \"In the given examples please explain what does c stands for and what is 10 c 2 ?\"})\n",
     "print(final_prompt)"
    ]
   },
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
     "\n",
     "\n",
     "chain = fewshot_pt | llm | str_parser\n",
-    "# chain.invoke({\"question\": \"In the above example please explain what does m stands for and what is 12 m 12 ?\"})"
+    "# chain.invoke({\"question\": \"what is 10 c 2 ?\"})"
    ]
   },
   {
@@ -245,21 +245,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I think I've learned something new!\n",
+      "Based on the examples, I notice that the answers seem to be increasing by a fixed amount each time.\n",
+      " Specifically:\n",
       "\n",
-      "Based on the examples, it seems that \"c\" represents multiplication.\n",
-      " Therefore, if we apply this to the final question:\n",
+      "* 2 * 2 = 4 (increase of 2)\n",
+      "* 5 * 3 = 8 (increase of 3)\n",
+      "* 12 * 2 = 14 (increase of 2)\n",
       "\n",
-      "What is 12 c 12?\n",
+      "This pattern suggests that '*' might mean \"add\" or \"increment by\", rather than the typical meaning of multiplication.\n",
       "\n",
-      "Answer: 144\n"
+      "If this is correct, then:\n",
+      "\n",
+      "* 12 * 12 would be an increase of 12 to 12, which would result in an answer of... 24!\n",
+      "\n",
+      "Am I on the right track?\n"
      ]
     }
    ],
@@ -267,7 +273,7 @@
     "line = ''\n",
     "\n",
     "# If we want to stream output line by line.\n",
-    "for chunk in chain.stream({\"question\": \"what is 12 c 12 ?\"}):\n",
+    "for chunk in chain.stream({\"question\": \"Based on the examples what do you think '*' means and what is 12 * 12 ?\"}):\n",
     "    if chunk == '.' or chunk == '\\n':\n",
     "        line += chunk\n",
     "        print(line)\n",
@@ -283,23 +289,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 📖 FewShotExamples with example selection 📖"
+    "### 🪢 Ollama Embeddings 🪢"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'langchain_openai'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[66], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_chroma\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Chroma\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_core\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexample_selectors\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SemanticSimilarityExampleSelector\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_openai\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m OpenAIEmbeddings\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# first create an extensive list of dictionaries as examples.\u001b[39;00m\n\u001b[1;32m      8\u001b[0m user_provided_examples: List[Dict[\u001b[38;5;28mstr\u001b[39m, \u001b[38;5;28mstr\u001b[39m]] \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m      9\u001b[0m     {\n\u001b[1;32m     10\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mquestion\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwhat is 2 c 2 ?\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     32\u001b[0m     },\n\u001b[1;32m     33\u001b[0m ]\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'langchain_openai'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4096\n",
+      "[-2.3860483169555664, 3.483680486679077, -3.3421359062194824, -1.697510004043579, 1.383670687675476]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_community.embeddings import OllamaEmbeddings\n",
+    "\n",
+    "embedder = OllamaEmbeddings(model=\"llama3\")\n",
+    "\n",
+    "embeddings  = embedder.embed_query('Hi My name is Sahil')\n",
+    "\n",
+    "print(len(embeddings))\n",
+    "print(embeddings[:5])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 📖Semantic similarity example selection 📖"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Examples most similar to the input: what is 10 m 2 ?\n",
+      "\n",
+      "\n",
+      "answer: 2.5\n",
+      "question: what is 5 m 2 ?\n",
+      "\n",
+      "\n",
+      "answer: 2.5\n",
+      "question: what is 5 m 2 ?\n",
+      "\n",
+      "\n",
+      "answer: 2.5\n",
+      "question: what is 5 m 2 ?\n",
+      "\n",
+      "\n",
+      "answer: 4\n",
+      "question: what is 12 m 3 ?\n"
      ]
     }
    ],
@@ -307,9 +357,20 @@
     "\n",
     "#? from langchain_core.prompts import FewShotPromptTemplate\n",
     "\n",
+    "from typing import List, Dict\n",
     "from langchain_chroma import Chroma\n",
     "from langchain_core.example_selectors import SemanticSimilarityExampleSelector\n",
-    "from langchain_openai import OpenAIEmbeddings\n",
+    "from langchain_community.embeddings import OllamaEmbeddings\n",
+    "\n",
+    "# Create an embedder object.\n",
+    "embedder = OllamaEmbeddings(model=\"llama3\")\n",
+    "\n",
+    "\n",
+    "# # then we will create a template showing how to present examples to the LLM.\n",
+    "example_template : str = \"\"\"\n",
+    "    Question : {question}\n",
+    "    Answer : {answer}\n",
+    "\"\"\"\n",
     "\n",
     "# first create an extensive list of dictionaries as examples.\n",
     "user_provided_examples: List[Dict[str, str]] = [\n",
@@ -343,15 +404,15 @@
     "# Create an example selector \n",
     "example_selector = SemanticSimilarityExampleSelector.from_examples(\n",
     "    user_provided_examples,                 # This is the list of examples available to select from.\n",
-    "    OpenAIEmbeddings(),                     # This is the embedding class used to produce embeddings which are used to measure semantic similarity.\n",
+    "    embedder,                               # This is the embedding class used to produce embeddings which are used to measure semantic similarity.\n",
     "    Chroma,                                 # This is the VectorStore class that is used to store the embeddings and do a similarity search over.\n",
-    "    k=2,                                    # This is the number of examples to produce.\n",
+    "    k=4,                                    # This is the number of examples to produce.\n",
     ")\n",
     "\n",
     "\n",
     "\n",
     "# Select the most similar example to the input.\n",
-    "question = \"what is 10 c 2 ?\"\n",
+    "question = \"what is 10 m 2 ?\"\n",
     "selected_examples = example_selector.select_examples({\"question\": question})\n",
     "print(f\"Examples most similar to the input: {question}\")\n",
     "for example in selected_examples:\n",
@@ -361,11 +422,6 @@
     "\n",
     "\n",
     "\n",
-    "# # then we will create a template showing how to present examples to the LLM.\n",
-    "# example_template = \"\"\"\n",
-    "#     Question : {question}\n",
-    "#     Answer : {answer}\n",
-    "# \"\"\"\n",
     "\n",
     "\n",
     "# # we will use that template to create a prompt_template\n",
